# Akshar_gema_kagle

./: .gitignore  AUDIT.md  PROJECT.md  README.md  TUNING_GUIDE.md  benchmark_gemma4_indic_hw.py  data_prep_notebook.ipynb  dataset_prep.py  finetune.py  finetune_config.yaml  finetune_notebook.ipynb  gemma4_(e4b)_vision.py  prepare_cvit_data.py  pyproject.toml  requirements_data.txt  setup.sh  verify_dataset.py
.claude/: launch.json
data/: stats.json
results/: benchmark_summary.json  predictions_bengali.jsonl  predictions_gujarati.jsonl  predictions_gurumukhi.jsonl  predictions_hindi.jsonl  predictions_kannada.jsonl  predictions_malayalam.jsonl  predictions_odia.jsonl  predictions_tamil.jsonl  predictions_telugu.jsonl  predictions_urdu.jsonl
