[project]
name = "akshar-benchmark"
version = "0.1.0"
description = "Zero-shot Indic Handwriting OCR benchmark with Gemma 4"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "datasets>=2.19.0",
    "tqdm>=4.66.0",
    "huggingface-hub>=0.22.0",
    "transformers>=4.50.0",
    "accelerate>=1.3.0",
    "bitsandbytes>=0.45.0",
    "numpy",
    "sentencepiece",
    "protobuf",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "PyYAML>=6.0",
    "unsloth>=2024.1; sys_platform != 'win32'",
    "pillow>=12.2.0",
    "unsloth>=2026.4.2",
    "wandb>=0.25.1",
    "ipywidgets>=8.1.8",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
